force-app/main/default/objects/Quote/fields/Account_for_Filtering__c.field-meta.xml
<CustomField>
    <fullName>Account_for_Filtering__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>quick action populates this account from the quote opportunity&#39;s account</description>
    <inlineHelpText>quick action populates this account from the quote opportunity&#39;s account</inlineHelpText>
    <label>Account for Filtering</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Quotes (Account)</relationshipLabel>
    <relationshipName>Quotes3</relationshipName>
    <type>Lookup</type>
</CustomField>