force-app/main/default/objects/Quote/fields/Agency__c.field-meta.xml
<CustomField>
    <fullName>Agency__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Agency</label>
    <type>Checkbox</type>
</CustomField>