force-app/main/default/objects/Quote/fields/Agreement__c.field-meta.xml
<CustomField>
    <fullName>Agreement__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Agreement</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Account_for_Filtering__c</field>
            <operation>equals</operation>
            <valueField>Agreement__c.Account__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Agreement__c</referenceTo>
    <relationshipLabel>Quotes</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>