force-app/main/default/objects/Quote/fields/Agreement_Verified__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Verified__c</fullName>
    <formula>IF ( RecordType.Name == $Setup.CnISystemVariables__c.QuoteFixedPrice__c, true, 
  IF ( ISPICKVAL(Agreement__r.Agreement_Status__c, &quot;Activated&quot;), true, false) 
)</formula>
    <label>Agreement Verified</label>
    <type>Checkbox</type>
</CustomField>