force-app/main/default/objects/Quote/fields/Allow_Nomination_Change__c.field-meta.xml
<CustomField>
    <fullName>Allow_Nomination_Change__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Can customer and/or CES change the volume specified in the TC?</description>
    <inlineHelpText>Can customer and/or CES change the volume specified in the TC?</inlineHelpText>
    <label>Allow Nomination Change</label>
    <type>Checkbox</type>
</CustomField>