force-app/main/default/objects/Quote/fields/Business_Approval_Complete__c.field-meta.xml
<CustomField>
    <fullName>Business_Approval_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Business Approval Complete</label>
    <type>Checkbox</type>
</CustomField>