force-app/main/default/objects/Quote/fields/Capacity_Review_Applies__c.field-meta.xml
<CustomField>
    <fullName>Capacity_Review_Applies__c</fullName>
    <formula>Supply_Pool__r.Capacity_Review_Applies__c</formula>
    <label>Capacity Review Applies</label>
    <type>Checkbox</type>
</CustomField>