force-app/main/default/objects/Quote/fields/Capacity_Verification__c.field-meta.xml
<CustomField>
    <fullName>Capacity_Verification__c</fullName>
    <description>indicates whether the quote capacity was approved or rejected</description>
    <label>Capacity Verification</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Quote_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending Approval</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Not Needed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>