force-app/main/default/objects/Quote/fields/Complex_Contract_Type__c.field-meta.xml
<CustomField>
    <fullName>Complex_Contract_Type__c</fullName>
    <label>Manual / Complex Contract Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Complex_Contract_Type</valueSetName>
    </valueSet>
</CustomField>