force-app/main/default/objects/Quote/fields/Consolidated_Billing__c.field-meta.xml
<CustomField>
    <fullName>Consolidated_Billing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Consolidated Billing</label>
    <type>Checkbox</type>
</CustomField>