force-app/main/default/objects/Quote/fields/Delivery_Point__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Point__c</fullName>
    <label>Delivery Point</label>
    <length>255</length>
    <type>Text</type>
</CustomField>