force-app/main/default/objects/Quote/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <formula>DATE(
year( Start_Date__c )
+ if((month( Start_Date__c ) +  Term__c ) = 12, 0, floor((month( Start_Date__c ) +  Term__c  )/12)) + if(or(and(month( Start_Date__c )=12, mod(Term__c, 12)=0),and(month(Start_Date__c) + mod(Term__c, 12) = 12, Term__c &gt;= 12)),-1,0)
,
if( mod( month( Start_Date__c ) +  Term__c   , 12 ) = 0, 12 , mod( month( Start_Date__c ) +  Term__c   , 12 ))
,
min( 
day( Start_Date__c ),
case(
max( mod( month( Start_Date__c ) +  Term__c   , 12 ) , 1),
9,30,
4,30,
6,30,
11,30,
2,28,
31
)
)
) - 1</formula>
    <label>End Date</label>
    <type>Date</type>
</CustomField>