force-app/main/default/objects/Quote/fields/End_Date_Raw__c.field-meta.xml
<CustomField>
    <fullName>End_Date_Raw__c</fullName>
    <label>End Date Raw</label>
    <type>Date</type>
</CustomField>