force-app/main/default/objects/Quote/fields/End_Day__c.field-meta.xml
<CustomField>
    <fullName>End_Day__c</fullName>
    <formula>Start_Day__c + Days__c - 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>End Day</label>
    <type>Date</type>
</CustomField>