force-app/main/default/objects/Quote/fields/Executed_By__c.field-meta.xml
<CustomField>
    <fullName>Executed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Executed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Quotes2User2</relationshipName>
    <type>Lookup</type>
</CustomField>