force-app/main/default/objects/Quote/fields/Execution_Date__c.field-meta.xml
<CustomField>
    <fullName>Execution_Date__c</fullName>
    <description>The date on which the quote was initially submitted for execution.</description>
    <label>Execution Date</label>
    <type>DateTime</type>
</CustomField>