force-app/main/default/objects/Quote/fields/Financial_Desk_Approval__c.field-meta.xml
<CustomField>
    <fullName>Financial_Desk_Approval__c</fullName>
    <description>indicates of financial desk has approved the quote</description>
    <label>Financial Desk Approval</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>