force-app/main/default/objects/Quote/fields/Financial_Desk_Approved_By__c.field-meta.xml
<CustomField>
    <fullName>Financial_Desk_Approved_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Financial Desk Approved By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>