force-app/main/default/objects/Quote/fields/Has_Storage__c.field-meta.xml
<CustomField>
    <fullName>Has_Storage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Storage</label>
    <type>Checkbox</type>
</CustomField>