force-app/main/default/objects/Quote/fields/Indicative__c.field-meta.xml
<CustomField>
    <fullName>Indicative__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Indicative</label>
    <type>Checkbox</type>
</CustomField>