force-app/main/default/objects/Quote/fields/Interface_Message__c.field-meta.xml
<CustomField>
    <fullName>Interface_Message__c</fullName>
    <label>Interface_Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>