force-app/main/default/objects/Quote/fields/Interface_Status__c.field-meta.xml
<CustomField>
    <fullName>Interface_Status__c</fullName>
    <label>Interface Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
                <default>true</default>
                <label>Not Started</label>
            </value>
            <value>
                <fullName>Sent</fullName>
            </value>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Error in Communication</fullName>
            </value>
            <value>
                <fullName>Error Message Returned</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>