force-app/main/default/objects/Quote/fields/Is_Market_Price__c.field-meta.xml
<CustomField>
    <fullName>Is_Market_Price__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Market Price</label>
    <type>Checkbox</type>
</CustomField>