force-app/main/default/objects/Quote/fields/K_Notes__c.field-meta.xml
<CustomField>
    <fullName>K_Notes__c</fullName>
    <label>Keepwhole Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>