force-app/main/default/objects/Quote/fields/K_Notes_Under__c.field-meta.xml
<CustomField>
    <fullName>K_Notes_Under__c</fullName>
    <label>Keepwhole Notes Under</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>