force-app/main/default/objects/Quote/fields/KC_Notes_Under__c.field-meta.xml
<CustomField>
    <fullName>KC_Notes_Under__c</fullName>
    <label>Keepwhole Cashout Notes Under</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>