force-app/main/default/objects/Quote/fields/KC_Over_Adder__c.field-meta.xml
<CustomField>
    <fullName>KC_Over_Adder__c</fullName>
    <label>Keepwhole Comment Over Adder</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>