force-app/main/default/objects/Quote/fields/Keepwhole_Cashout_Comment__c.field-meta.xml
<CustomField>
    <fullName>Keepwhole_Cashout_Comment__c</fullName>
    <label>Keepwhole Cashout Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>