force-app/main/default/objects/Quote/fields/Keepwhole_Cashout_Comment_Over__c.field-meta.xml
<CustomField>
    <fullName>Keepwhole_Cashout_Comment_Over__c</fullName>
    <label>Keepwhole Cashout Comment Over</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>