force-app/main/default/objects/Quote/fields/Keepwhole_Cashout_Under_Wacog__c.field-meta.xml
<CustomField>
    <fullName>Keepwhole_Cashout_Under_Wacog__c</fullName>
    <label>Keepwhole Cashout Under Wacog</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>