force-app/main/default/objects/Quote/fields/Keepwhole_Comment_Over__c.field-meta.xml
<CustomField>
    <fullName>Keepwhole_Comment_Over__c</fullName>
    <label>Keepwhole Comment Over</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>