force-app/main/default/objects/Quote/fields/Keepwhole_Comment_Under__c.field-meta.xml
<CustomField>
    <fullName>Keepwhole_Comment_Under__c</fullName>
    <label>Keepwhole Comment Under</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>