force-app/main/default/objects/Quote/fields/Keepwhole_OFO_Comment__c.field-meta.xml
<CustomField>
    <fullName>Keepwhole_OFO_Comment__c</fullName>
    <label>Keepwhole OFO Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>