force-app/main/default/objects/Quote/fields/Keepwhole_OFO_Over_Wacog__c.field-meta.xml
<CustomField>
    <fullName>Keepwhole_OFO_Over_Wacog__c</fullName>
    <label>Keepwhole OFO Over Wacog</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>