force-app/main/default/objects/Quote/fields/Keepwhole_Over_Wacog__c.field-meta.xml
<CustomField>
    <fullName>Keepwhole_Over_Wacog__c</fullName>
    <label>Keepwhole Over Wacog</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>