force-app/main/default/objects/Quote/fields/Keepwhole_Y_N__c.field-meta.xml
<CustomField>
    <fullName>Keepwhole_Y_N__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Keepwhole (Y/N)</label>
    <type>Checkbox</type>
</CustomField>