force-app/main/default/objects/Quote/fields/KO_Notes__c.field-meta.xml
<CustomField>
    <fullName>KO_Notes__c</fullName>
    <label>Keepwhole OFO Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>