force-app/main/default/objects/Quote/fields/KOC_Over_Adder__c.field-meta.xml
<CustomField>
    <fullName>KOC_Over_Adder__c</fullName>
    <label>Keepwhole OFO Comment Over Adder</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>