force-app/main/default/objects/Quote/fields/Locked_by_Process__c.field-meta.xml
<CustomField>
    <fullName>Locked_by_Process__c</fullName>
    <label>Locked by Process</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Execution</fullName>
            </value>
            <value>
                <fullName>PricingRequest</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>