force-app/main/default/objects/Quote/fields/Margin_Option__c.field-meta.xml
<CustomField>
    <fullName>Margin_Option__c</fullName>
    <label>Margin Option</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Keep Price</fullName>
            </value>
            <value>
                <fullName>Keep Margin</fullName>
                <default>true</default>
                <label>Keep Margin</label>
            </value>
            <value>
                <fullName>Call</fullName>
                <isActive>false</isActive>
                <label>Call</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>