force-app/main/default/objects/Quote/fields/Margin_Type__c.field-meta.xml
<CustomField>
    <fullName>Margin_Type__c</fullName>
    <formula>BillingCity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Margin Type</label>
    <type>Text</type>
</CustomField>