force-app/main/default/objects/Quote/fields/National_Account_f__c.field-meta.xml
<CustomField>
    <fullName>National_Account_f__c</fullName>
    <formula>Opportunity.National_Account__c</formula>
    <label>National Account</label>
    <type>Checkbox</type>
</CustomField>