force-app/main/default/objects/Quote/fields/Non_Paid_Consultant__c.field-meta.xml
<CustomField>
    <fullName>Non_Paid_Consultant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Non-Paid Consultant</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Consultant</value>
        </filterItems>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>Non-Paid Consultant</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Quotes (Non-Paid Consultant)</relationshipLabel>
    <relationshipName>Quotes2</relationshipName>
    <type>Lookup</type>
</CustomField>