force-app/main/default/objects/Quote/fields/Paid_Consultant_1__c.field-meta.xml
<CustomField>
    <fullName>Paid_Consultant_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Paid Consultant 1</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 AND 2</booleanFilter>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Consultant</value>
        </filterItems>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>Paid Consultant</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Quotes</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>