force-app/main/default/objects/Quote/fields/Paid_Consultant_1_Margin_Pctg__c.field-meta.xml
<CustomField>
    <fullName>Paid_Consultant_1_Margin_Pctg__c</fullName>
    <label>Paid Consultant 1 Margin Pctg</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>