force-app/main/default/objects/Quote/fields/Paid_Consultant_1_Pay_Type__c.field-meta.xml
<CustomField>
    <fullName>Paid_Consultant_1_Pay_Type__c</fullName>
    <label>Paid Consultant 1 Pay Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Consultant_Pay_Method</valueSetName>
    </valueSet>
</CustomField>