force-app/main/default/objects/Quote/fields/Pricing_Method__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Method__c</fullName>
    <label>Pricing Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Pricing_Method</valueSetName>
    </valueSet>
</CustomField>