force-app/main/default/objects/Quote/fields/Pricing_Scheme__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Scheme__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pricing Scheme</label>
    <referenceTo>Pricing_Scheme__c</referenceTo>
    <relationshipLabel>Quotes</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>