force-app/main/default/objects/Quote/fields/Quick_Quote__c.field-meta.xml
<CustomField>
    <fullName>Quick_Quote__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Quick Quote</label>
    <type>Checkbox</type>
</CustomField>