force-app/main/default/objects/Quote/fields/Quote_Approval__c.field-meta.xml
<CustomField>
    <fullName>Quote_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <description>indicates if the overall quote has been approved</description>
    <label>Quote Approval</label>
    <type>Checkbox</type>
</CustomField>