force-app/main/default/objects/Quote/fields/Quote_Locked__c.field-meta.xml
<CustomField>
    <fullName>Quote_Locked__c</fullName>
    <label>Quote Locked</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Execution</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>