force-app/main/default/objects/Quote/fields/Quote_Type__c.field-meta.xml
<CustomField>
    <fullName>Quote_Type__c</fullName>
    <label>Quote Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Base Pricing</fullName>
            </value>
            <value>
                <fullName>Spot Pricing</fullName>
            </value>
            <value>
                <fullName>Fixed Price Tier</fullName>
            </value>
            <value>
                <fullName>Surrendered Storage Pricing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>