force-app/main/default/objects/Quote/fields/Renewal_Notice_Days__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Notice_Days__c</fullName>
    <label>Renewal Notice Days</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>