force-app/main/default/objects/Quote/fields/Renewal_Type__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Type__c</fullName>
    <label>Renewal Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Autorenew</fullName>
            </value>
            <value>
                <fullName>Autorenew with Approval</fullName>
            </value>
            <value>
                <fullName>Autorenew with Refresh</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>