force-app/main/default/objects/Quote/fields/Sales_Director__c.field-meta.xml
<CustomField>
    <fullName>Sales_Director__c</fullName>
    <formula>Sales_Rep__r.Manager.Manager.Manager.FirstName &amp; &quot; &quot; &amp; Sales_Rep__r.Manager.Manager.Manager.LastName</formula>
    <label>Sales Director</label>
    <type>Text</type>
</CustomField>