force-app/main/default/objects/Quote/fields/Scheduling_Approval__c.field-meta.xml
<CustomField>
    <fullName>Scheduling_Approval__c</fullName>
    <label>Scheduling Approval</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>