force-app/main/default/objects/Quote/fields/Start_Day__c.field-meta.xml
<CustomField>
    <fullName>Start_Day__c</fullName>
    <description>for intra month spot quotes when the quote is not for the entire month</description>
    <inlineHelpText>for intra month spot quotes when the quote is not for the entire month</inlineHelpText>
    <label>Start Day</label>
    <type>Date</type>
</CustomField>