force-app/main/default/objects/Quote/fields/Supply_Pool__c.field-meta.xml
<CustomField>
    <fullName>Supply_Pool__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supply Pool</label>
    <referenceTo>Supply_Pool__c</referenceTo>
    <relationshipLabel>Quotes</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>