force-app/main/default/objects/Quote/fields/TC_Pricing_Text__c.field-meta.xml
<CustomField>
    <fullName>TC_Pricing_Text__c</fullName>
    <label>TC Pricing Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>