force-app/main/default/objects/Quote/fields/Term__c.field-meta.xml
<CustomField>
    <fullName>Term__c</fullName>
    <label>Term</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>