force-app/main/default/objects/Quote/fields/Total_Volume__c.field-meta.xml
<CustomField>
    <fullName>Total_Volume__c</fullName>
    <description>Total volume from all line items on the quote.</description>
    <label>Total Volume</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>