force-app/main/default/objects/Quote/fields/Utility__c.field-meta.xml
<CustomField>
    <fullName>Utility__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Utility</label>
    <referenceTo>TDSP__c</referenceTo>
    <relationshipLabel>Quotes</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>