force-app/main/default/objects/Quote/fields/Variable_Keepwhole_Adder__c.field-meta.xml
<CustomField>
    <fullName>Variable_Keepwhole_Adder__c</fullName>
    <defaultValue>false</defaultValue>
    <description>does the keepwhole adder change during the term?</description>
    <label>Variable Keepwhole Adder</label>
    <type>Checkbox</type>
</CustomField>