force-app/main/default/objects/Quote/fields/Volume_Source__c.field-meta.xml
<CustomField>
    <fullName>Volume_Source__c</fullName>
    <label>Volume Requirements Calculated From</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Forecast Volume</fullName>
            </value>
            <value>
                <fullName>Contract Volume</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>