force-app/main/default/objects/Quote/fields/Wacog_Base_Consultant_Fee__c.field-meta.xml
<CustomField>
    <fullName>Wacog_Base_Consultant_Fee__c</fullName>
    <label>Wacog Base Consultant Fee</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>