force-app/main/default/objects/Quote/fields/Wacog_Base_Margin__c.field-meta.xml
<CustomField>
    <fullName>Wacog_Base_Margin__c</fullName>
    <label>Wacog Base Margin</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>