force-app/main/default/objects/Quote/fields/Wacog_Cost__c.field-meta.xml
<CustomField>
    <fullName>Wacog_Cost__c</fullName>
    <label>Wacog Cost</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>