force-app/main/default/objects/Quote/fields/Wacog_Price__c.field-meta.xml
<CustomField>
    <fullName>Wacog_Price__c</fullName>
    <label>Wacog Price</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>